--- a/webapp/tournaments.html
+++ b/webapp/tournaments.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div ng-show="sessionService.isAdminForRegion(regionService.region.id)">
-            <h4 class="text-right"><button type="button" class="btn btn-danger" ng-click="open()">Upload a Tournament</button></h4>
+            <h4 class="text-right"><button type="button" class="btn btn-danger" ng-click="open()">Upload a Tournaments</button></h4>
         </div>
     </div>
     <div class="row">
@@ -9,10 +9,12 @@
             <tr>
                 <td>Date</td>
                 <td>Name</td>
+                <td></td>
             </tr>
             <tr ng-repeat="tournament in tournamentService.tournamentList">
                 <td>{{tournament.date}}</td>
                 <td ng-class="{'pending': tournament.pending}"><a href="#/{{regionService.region.id}}/tournaments/{{tournament.id}}">{{tournament.name}}</a></td>
+                <td ng-show="sessionService.isAdminForRegion(regionService.region.id)"><a ng-click="openDeleteTournamentModal(tournament.id)">Delete</a></td>
             </tr>
         </table>
     </div>
