--- a/webapp/tournaments.html
+++ b/webapp/tournaments.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div ng-show="sessionService.isAdminForRegion(regionService.region.id)">
-            <h4 class="text-right"><button type="button" class="btn btn-danger" ng-click="open()">Upload a Tournaments</button></h4>
+            <h4 class="text-right"><button type="button" class="btn btn-danger" ng-click="open()">Upload a Tournament</button></h4>
         </div>
     </div>
     <div class="row">
